project(AndroidTools)
cmake_minimum_required(VERSION 2.6)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin/lib)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/shared" "${CMAKE_SOURCE_DIR}/src")
SET(SHARED_SOURCES shared/bootimg.h)
SET(HDRBOOT_SOURCES src/hdrboot.c ${SHARED_SOURCES})
SET(BOOTUNPACK_SOURCES src/bootunpack.c ${SHARED_SOURCES})
SET(MKBOOTIMG_SOURCES src/mkbootimg.c src/mincrypt/rsa.c src/mincrypt/rsa.h src/mincrypt/sha.c src/mincrypt/sha.h ${SHARED_SOURCES})
ADD_EXECUTABLE(hdrboot ${HDRBOOT_SOURCES})
ADD_EXECUTABLE(bootunpack ${BOOTUNPACK_SOURCES})
ADD_EXECUTABLE(mkbootimg ${MKBOOTIMG_SOURCES})
